feat: implement and add parallel functions

--- a/GraphQuery_RPC_Version.vcxproj
+++ b/GraphQuery_RPC_Version.vcxproj
@@ -130,11 +130,13 @@
     <ClInclude Include="Graph.h" />
     <ClInclude Include="httplib.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="ThreadPool.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="httplib.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ThreadPool.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
